Installed accelstepper and softwareserial library

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	featherfly/SoftwareSerial@^1.0
