--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328new
+[env:teensy40]
+platform = teensy
+board = teensy40
 framework = arduino
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	arduinogetstarted/ezButton@^1.0.4
+	featherfly/SoftwareSerial@^1.0
